6 rader 3 med färg

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 
 	<body>
-		<p>Relevant text 1 </p>
-		<p>Relevant text 2</p>
-		<p>Relevant text 3</p>
+		<p><FONT COLOR=RED>Relevant text 1 </FONT COLOR=RED></p>
+		<p><font color=blue>Relevant text 2</font color= lue></p>
+		<p><font color=green>Relevant text 3</font color=green></p>
 		<p>Relevant text 4</p>
 		<p>Relevant text 5</p>
 		<p>Relevant text 6</p>
