Bild och hemsida

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 		<p>Relevant text 4</p>
 		<p>Relevant text 5</p>
 		<p>Relevant text 6</p>
+		<a href="http://jesper.nu/">Min hemsida</a>
+		<img src="http://i.ytimg.com/vi/3dSj-2_7Zw8/maxresdefault.jpg" style="width:80%;height:100%">
+	
+
 	</body>
 </html>
