stor texstil och ändrade font till style

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	</head>
 
 	<body>
-		<p><FONT COLOR=RED>Relevant text 1 </FONT COLOR=RED></p>
-		<p><font color=blue>Relevant text 2</font color= lue></p>
-		<p><font color=green>Relevant text 3</font color=green></p>
-		<p>Relevant text 4</p>
-		<p>Relevant text 5</p>
-		<p>Relevant text 6</p>
+		<p style="color:red">Relevant text 1 </p>
+		<p style="color:blue">Relevant text2 </p>
+		<p style="color:green">Relevant text 3 </p>
+		<p><h1>STOR Relevant text 4 </h1></p>
+		<p>Relevant text 5 <br>
+		Relevant text 6</p>
 		<a href="http://jesper.nu/">Min hemsida</a>
 		<img src="http://i.ytimg.com/vi/3dSj-2_7Zw8/maxresdefault.jpg" style="width:80%;height:100%">
 	
