Många text ändringar och bild och hemsida nu samma sak

--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 
 
 
-	<head>
+	<head style="background-color:blue">
+
 		<meta charset="htf-8"/>
+
 		<title> Intro uppgift HTML </title>
+
 	</head>
 
-	<body>
-		<p style="color:red">Relevant text 1 </p>
-		<p style="color:blue">Relevant text2 </p>
-		<p style="color:green">Relevant text 3 </p>
-		<p><h1>STOR Relevant text 4 </h1></p>
-		<p>Relevant text 5 <br>
-		Relevant text 6</p>
-		<a href="http://jesper.nu/">Min hemsida</a>
-		<img src="http://i.ytimg.com/vi/3dSj-2_7Zw8/maxresdefault.jpg" style="width:80%;height:100%">
+	<body style="background-color:lightblue">
+
+		<h1 style="font-family:comic sans ms">Min hemsida</h1>
+		<p style="color:red;margin:0px"> Relevant text 1 </p>
+		<p style="color:blue;margin:0px;">Relevant text 2 </p>
+		<p style="color:green;margin:0px;">Relevant text 3 </p>
+		<h4 style="margin:0px">Relevant text 4 </h4>
+		<h3 style="margin:0px">Relevant text 5 </h3>
+		<h2 style="margin:0px">Relevant text 6 </h2>
+
+		<a href="http://jesper.nu/"><img src="http://jesper.nu/images/community/music_logo.gif"></a> <br>
+	
+
+
+
 	
 
 	</body>
